--- a/license.html
+++ b/license.html
@@ -1,6 +1,6 @@
 <!--
 Faroogh's personel pastebin service
-Copyright (C) 2017  FarooghKZ <farooghkz@spams_come_here.openmailbox.org>
+Copyright (C) 2017  FarooghKZ <farooghkz@openmailbox.org>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -22,7 +22,7 @@ GNU Affero General Public License for more details.
         <hr>
         
         Faroogh's personel pastebin service<br>
-        <p>Copyright (C) 2017  FarooghKZ &nplt;farooghkz@spams_come_here.openmailbox.org&npgt;</p>
+        <p>Copyright (C) 2017  FarooghKZ farooghkz@spams_come_here.openmailbox.org</p>
 
         <p>This program is free software: you can redistribute it and/or modify
         it under the terms of the GNU Affero General Public License as published by
