--- a/no-key.html
+++ b/no-key.html
@@ -24,6 +24,6 @@ GNU Affero General Public License for more details.
             This pastebin is a personel service for personel usage, just the administrator of it may have the key and use it, however if you think that you should have a key and you should be able to use this service simply email the administrator: <kbd>admin@somewhere.com</kbd>
         </p>
         <hr>
-        Faroogh's personel pastebin service is a Free/Open Source software. for more information and code see: <a href=\"license.html\">License page</a>. source code is available on <a href=\"http://github.com/\">Github</a>
+        Faroogh's personel pastebin service is a Free/Open Source software. for more information and code see: <a href="license.html">License page</a>. source code is available on <a href="http://github.com/">Github</a>
     </body>
 </html>
